01-n8n-full/yaml/01-editor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: n8n
  name: n8n-editor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n-editor
  template:
    metadata:
      labels:
        app: n8n-editor
    spec:
      containers:
      - name: n8n-editor
        image: n8nio/n8n:latest
        ports:
          - name: http
            containerPort: 5678
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1"
      volumeMounts:
        - name: n8n-data
          mountPath: /data/.n8n  # Caminho onde o volume será montado no container
    volumes:
      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-data  # Referência ao PVC n8n-claim0
