01-n8n-full/yaml/03-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: n8n
  name: n8n-webhook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: n8n-webhook
  template:
    metadata:
      labels:
        app: n8n-webhook
    spec:
      containers:
      - name: n8n-webhook
        image: n8nio/n8n:latest
        ports:
          - name: http
            containerPort: 5678
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1"
