01-n8n-full/yaml/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-editor
  namespace: n8n
  labels:
    app: n8n
    component: service
spec:
  type: ClusterIP
  selector:
    app: n8n-editor
    component: deployment
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 5678
