01-n8n-full/yaml/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: n8n
  name: n8n-webhook
spec:
  selector:
    app: n8n-webhook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
