01-n8n-full/yaml/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-editor-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: n8n.editor.mvpos.app.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n-editor
            port:
              number: 5678
  tls:
  - hosts:
    - n8n.editor.mvpos.app.br
    secretName: n8n-tls-secret
