01-n8n-full/yaml/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-editor-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: <URL_EDITOR_N8N>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n-editor
            port:
              number: 5678
  tls:
  - hosts:
    - <URL_EDITOR_N8N>
    secretName: n8n-tls-secret
